--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             </div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 </body>
 </html>
